--- a/index.html
+++ b/index.html
@@ -22,37 +22,59 @@
                 <i class="search-icon fa-solid fa-magnifying-glass"></i>
             </div>
             <div id="cart-icon-container">
-                <p id="cart-count"> 0 </p>
-                <i class="cart-icon fa-solid fa-cart-shopping"></i>
+                <p id="cart-count"> {{ calculateCartQuantity }}</p>
+                <a 
+                    v-if="!cartPage && cartItemCount > 0"
+                    id="cart-link" 
+                    v-on:click="toggle_page"
+                >
+                    <i class="cart-icon fa-solid fa-cart-shopping"></i>
+                </a>
+
+                <a 
+                    v-else-if="cartPage && formSubmitted"
+                    id="cart-link" 
+                    v-on:click="toggle_page"
+                >
+                    <i class="cart-icon fa-solid fa-cart-shopping"></i>
+                </a>
+
+                <a v-else id="cart-link-disabled" href="javascript:void(0);">
+                    <i class="cart-icon fa-solid fa-cart-shopping"></i>
+                </a>
             </div>
         </header>
 
         <!-- Main Page -->
         <main id="main-container">
-            <section id="courses-section">
-                <div class="course-container" v-for="course in courses" :key="course.id">
-                    <div class="course-thumbnail-container">
-                        <img class="course-thumbnail" :src="course.thumbnail" :alt="course.subject">
-                    </div>
-                    <div class="course-description">
-                        <p class="course-subject"><span>Subject:</span> {{ course.subject }}</p>
-                        <p class="course-location"><span>Location:</span> {{ course.location }}</p>
-                        <p class="course-spaces"><span>Spaces:</span> {{ course.spaces }}</p>
-                        <div class="course-rating">
-                            <span>Rating</span>
-                            <span class="full-star" v-for="n in course.rating">★</span>
-                            <span class="empty-star" v-for="n in 5 - course.rating">☆</span>
+            <div v-if="!cartPage" id="homepage">
+                <section id="courses-section">
+                    <div class="course-container" v-for="course in courses" :key="course.id">
+                        <div class="course-thumbnail-container">
+                            <img class="course-thumbnail" :src="course.thumbnail" :alt="course.subject">
                         </div>
-                        <p class="course-price"><span>Price:</span> ${{ course.price }}</p>
+                        <div class="course-description">
+                            <p class="course-subject"><span>Subject:</span> {{ course.subject }}</p>
+                            <p class="course-location"><span>Location:</span> {{ course.location }}</p>
+                            <p class="course-spaces"><span>Spaces:</span> {{ course.spaces }}</p>
+                            <div class="course-rating">
+                                <span>Rating</span>
+                                <span class="full-star" v-for="n in course.rating">★</span>
+                                <span class="empty-star" v-for="n in 5 - course.rating">☆</span>
+                            </div>
+                            <p class="course-price"><span>Price:</span> ${{ course.price }}</p>
+                        </div>
+                        <button 
+                            class="add-button"
+                            v-on:click="addToCart(course.id)"
+                        >
+                            Add To Cart
+                        </button>
                     </div>
-                    <button 
-                        class="add-button"
-                        v-on:click="addToCart(course.id)"
-                    >
-                        Add To Cart
-                    </button>
-                </div>
-            </section>
+                </section>
+            </div>
+
+            <div v-else>hi</div>
         </main>
     </div>
 
