--- a/index.html
+++ b/index.html
@@ -140,14 +140,22 @@
                     <h1>Checkout</h1>
 
                     <!-- Form for User Details -->
-                    <form>
+                    <form id="checkout-form">
                         <label for="name">Name: </label>
                         <!-- Only allow letters for Name -->
                         <input type="text" id="name" v-model="name" @input="filterLetters" placeholder="Enter your name" required>
 
+                        <!-- Email Input -->
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" v-model="email" placeholder="Enter your email" required>
+
                         <label for="phone">Phone: </label>
                         <!-- Only allow numbers for Phone -->
                         <input type="text" id="phone" v-model="phone" @input="filterNumbers" placeholder="Enter your phone number" required>
+
+                        <!-- Address Input -->
+                        <label for="address">Address:</label>
+                        <textarea id="address" v-model="address" placeholder="Enter your address" rows="4" required></textarea>
 
                         <!-- Submit Button -->
                         <button id="submit-button" v-on:click="validateForm">Submit</button>
